Fix paths on Windows to not fail when compiling